Upload Polymath data as .json

--- a/code/scrape-wikipedia/scrape-wikipedia.ipynb
+++ b/code/scrape-wikipedia/scrape-wikipedia.ipynb
@@ -426,7 +426,7 @@
       },
       "outputs": [],
       "source": [
-        "df_wiki = scrape_wikipedia_urls(list(math_wiki_urls), 'data-math-wiki-extended.json')"
+        "df_wiki = scrape_wikipedia_urls(list(math_wiki_urls), 'data-wiki.json')"
       ]
     },
     {
@@ -437,7 +437,7 @@
       },
       "outputs": [],
       "source": [
-        "download_df(df_wiki, 'data-math-wiki-extended.json')"
+        "download_df(df_wiki, 'data-wiki.json')"
       ]
     },
     {
@@ -770,7 +770,7 @@
     {
       "cell_type": "code",
       "source": [
-        "with open('data-wiki-corpus.txt', 'w') as file:\n",
+        "with open('wikipedia-docs.txt', 'w') as file:\n",
         "    for doc in wiki_corpus:\n",
         "        file.write(f\"{' '.join(doc)}\\n\")"
       ],
